--- a/resources/css/Stylesheet.css
+++ b/resources/css/Stylesheet.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap");
 
 body {
     margin: 0px;
     background-color: rgb(14, 14, 14);
-
 }
 
 /*mobile css*/
@@ -87,7 +86,6 @@ body {
 
     .left {
         text-align: left;
-
     }
 
     .right {
@@ -96,7 +94,7 @@ body {
     }
 
     .subscript {
-        font-family: 'Poppins', sans serif;
+        font-family: "Poppins", sans serif;
         font-weight: lighter;
         color: lightgray;
         font-size: medium;
@@ -119,7 +117,6 @@ body {
         display: none;
     }
 
-
     .footerleft {
         float: left;
         width: 100%;
@@ -132,7 +129,7 @@ body {
         font-style: italic;
         font-weight: lighter;
         margin-left: 3%;
-        font-size: 90%
+        font-size: 90%;
     }
 
     .footerright {
@@ -147,7 +144,7 @@ body {
         font-style: italic;
         font-weight: lighter;
         margin-left: 15%;
-        font-size: 90%
+        font-size: 90%;
     }
 
     .parallaxcenter {
@@ -255,7 +252,7 @@ body {
         color: white;
         font-family: "Poppins", sans serif;
         font-weight: bold;
-        transition: 0.3s
+        transition: 0.3s;
     }
 
     .button2 {
@@ -311,7 +308,6 @@ body {
         transition: 0.5s;
         position: relative;
     }
-
 
     .contactcenter {
         display: flex;
@@ -394,7 +390,6 @@ body {
         background-color: gray;
     }
 
-
     .imgcenterdiv {
         display: flex;
         align-items: center;
@@ -448,7 +443,7 @@ body {
 
     ::selection {
         color: black;
-        background: #bbf3fd
+        background: #bbf3fd;
     }
 
     .parallaxbottom {
@@ -472,12 +467,11 @@ body {
 
         75% {
             opacity: 1;
-            transform: translateY(500px)
+            transform: translateY(500px);
         }
 
         80% {
             opacity: 0;
-
         }
 
         90% {
@@ -501,7 +495,6 @@ body {
         width: 100%;
         margin: 0 0 20px 0;
         text-decoration: none !important;
-
     }
 
     .imgblog {
@@ -534,13 +527,6 @@ body {
 
     /*let goed op dit verdomde haakje!!!*/
 }
-
-
-
-
-
-
-
 
 /*---------------------------------------------------pc css------------------------------------------------*/
 @media screen and (min-width: 1201px) {
@@ -653,21 +639,18 @@ body {
 
     .center {
         text-align: center;
-
     }
 
     .left {
         text-align: left;
-
     }
 
     .right {
         text-align: left;
-
     }
 
     .subscript {
-        font-family: 'Poppins', sans serif;
+        font-family: "Poppins", sans serif;
         font-weight: lighter;
         color: lightgray;
         font-size: medium;
@@ -708,7 +691,7 @@ body {
         flex-direction: row;
         margin-left: 12%;
         margin-right: 12%;
-        flex-wrap: wrap
+        flex-wrap: wrap;
     }
 
     .blogcard {
@@ -764,8 +747,6 @@ body {
         text-decoration: none;
     }
 
-
-
     .footerleft {
         float: left;
         width: 100%;
@@ -778,7 +759,7 @@ body {
         font-style: italic;
         font-weight: lighter;
         margin-left: 3%;
-        font-size: 90%
+        font-size: 90%;
     }
 
     .footerright {
@@ -793,9 +774,8 @@ body {
         font-style: italic;
         font-weight: lighter;
         margin-left: 15%;
-        font-size: 90%
+        font-size: 90%;
     }
-
 
     .parallaxcenter {
         font-size: 350%;
@@ -832,8 +812,6 @@ body {
         align-items: center;
         padding-top: 12px;
     }
-
-
 
     .header {
         display: block;
@@ -903,8 +881,6 @@ body {
         margin-left: 1%;
     }
 
-
-
     .button2 {
         display: flex;
         font-family: "Poppins", sans serif;
@@ -960,7 +936,6 @@ body {
         transition: 0.5s;
     }
 
-
     .contactbox {
         float: left;
         margin-left: 20px;
@@ -979,7 +954,6 @@ body {
         position: relative;
     }
 
-
     .link {
         text-align: justify;
         font-family: "Open Sans", sans serif;
@@ -995,7 +969,6 @@ body {
         font-family: "Open Sans", sans serif;
         font-size: 100%;
         color: rgb(178, 236, 255);
-        ;
         text-decoration: underline;
         display: inline-flex;
         transition: 0.3s;
@@ -1020,7 +993,6 @@ body {
         font-family: "Open Sans", sans serif;
         font-size: 120%;
         color: rgb(178, 236, 255);
-        ;
         text-decoration: underline;
         display: inline-flex;
         padding-top: 10px;
@@ -1028,25 +1000,14 @@ body {
         transition: 0.3s;
         text-underline-offset: 2px;
     }
-
-    .hr {
-        width: 100%;
-        height: 1px;
-        border-width: 0;
-        color: gray;
-        background-color: gray;
-    }
-
     .hr2 {
-        width: 66%;
+        width: 100%;
         height: 2px;
         border-width: 0;
         color: gray;
         background-color: #333;
         margin-bottom: -3em;
     }
-
-
 
     .imgcenterdiv {
         display: flex;
@@ -1102,7 +1063,6 @@ body {
         margin-bottom: 5px;
     }
 
-
     .parallaxbottom {
         position: absolute;
         bottom: 5%;
@@ -1112,7 +1072,6 @@ body {
         animation-iteration-count: infinite;
         animation-timing-function: ease-in-out;
     }
-
 
     @keyframes downarrow {
         0% {
@@ -1125,12 +1084,11 @@ body {
 
         75% {
             opacity: 1;
-            transform: translateY(500px)
+            transform: translateY(500px);
         }
 
         80% {
             opacity: 0;
-
         }
 
         90% {
@@ -1189,6 +1147,7 @@ body {
 
     ::selection {
         color: black;
-        background: #bbf3fd
+        background: #bbf3fd;
     }
 }
+
